--- a/lib/ReactViews/Custom/Chart/chart-panel.scss
+++ b/lib/ReactViews/Custom/Chart/chart-panel.scss
@@ -10,6 +10,7 @@
   z-index: 10;
   background: $chart-panel-background;
   padding-bottom: 13px;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .header {
